[Wisp] retire Wisp1
Summary:
Delete all Wisp1 related code based on the fact that Wisp2 is more
powerful and stable than Wisp1.

Revert listed file changes and keep consistent with openjdk:

- AbstractSelectableChannel
- AbstractSelector
- ScheduledThreadPoolExecutor
- ThreadPoolExecutor
- EPollSelectorProvider
Remove features:

- SleepSelector
- WispSelector
- ThreadAsWisp with wisp.properties
Remove tests:

Wisp2 do not have engine selector anymore:
 - ClearEventTest
 - SelectorLazyCreateTest
 - WispEngineCriticalSectionTest
 - WispSelectorUnixSocketLeakTest
 - EngineSelectorTest
 - SelectorRebuildTest
 - LockUninterruptiblyTest
Outdated features:
 - WorkerContainerTest
 - EnableSleepSelectorTest
 - SelectorTest(WispSelector)
 - SleepSelectorTest
 - SubmittedTaskLimitTest
 - ThreadAsWispTest
Wisp1 unique test:
 - YieldTest
 - WaitNotifyTest
Duplicate:
 - ShutdownAndCreateNewTask
 - ShutdownTest
Non-trivial changes:

- Remove eventloop mechanism (should use juc instead)
- WispTask.engine become volatile
- WispTask.staus is only used to test alive

Test Plan: run all jtreg

Reviewers: sanhong.lsh, yunyao.zxl, shiyue.xw, lei.yul

Issue: https://aone.alibaba-inc.com/task/24108494

CR: https://code.aone.alibaba-inc.com/xcode/jdk11/codereview/2241339